Fixed issue #18 Error header overlaps on mobile and now hide unnessisary data in dev env

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -158,6 +158,10 @@ header {
   grid-row-gap: 0px;
 }
 
+#pagetitle {
+  line-height: 52px;
+}
+
 pre {
   margin: 0;
   font-size: 12px;
